# release-kit

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: build.rs  deploy.rs  init.rs  mod.rs  preview.rs  template.rs  validate.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  types.rs
crates/deployer/: Cargo.toml
crates/deployer/src/: lib.rs
crates/deployer/src/cloudflare/: mod.rs
crates/generator/: Cargo.toml
crates/generator/src/: lib.rs
crates/generator/src/components/: mod.rs
crates/validator/: Cargo.toml
crates/validator/src/: lib.rs
crates/worker-template/: Cargo.toml
crates/worker-template/src/: lib.rs
docs/: architecture.md  design.md  init-command.md  quickstart-improvements.md
examples/test-album/: README.md  album.toml
examples/test-album/notes/: album.md  track-01.md  track-03.md
