[package]
name = "release-kit"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "release-kit"
path = "src/main.rs"

[dependencies]
release-kit-core = { workspace = true }
release-kit-validator = { workspace = true }
release-kit-generator = { workspace = true }
release-kit-deployer = { workspace = true }

clap = { workspace = true }
clap_complete = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
notify = { workspace = true }
walkdir = { workspace = true }
lofty = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
