[package]
name = "release-kit"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "release-kit"
path = "src/main.rs"

[dependencies]
release-kit-core = { workspace = true }
release-kit-validator = { workspace = true }
release-kit-generator = { workspace = true }
release-kit-deployer = { workspace = true }

clap = { workspace = true }
clap_complete = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
notify = { workspace = true }
walkdir = { workspace = true }
lofty = { workspace = true }
chrono = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
tempfile = "3"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
zip = "2"
mime_guess = "2"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
